Updates to styling and contrast fix

--- a/static/style.css
+++ b/static/style.css
@@ -29,17 +29,21 @@ h1 {
 h2, h3 {
     color:rgb(35, 7, 119);
 }
+.information-box h2 {
+    color: aliceblue;
+    font-size: 150%;
+}
 
+.profile_post_container h1 {
+    color: aliceblue;
+    font-size: 150%;
+}
 h4 {
     color: var(--color-header);
     font-size: 175%;
     text-align: center;
 }
 
-h5 {
-    color: aliceblue;
-    font-size: 150%;
-}
 
 /* for a simple navbar. Talk to Scott if you want drop-downs. */
 nav{
@@ -170,22 +174,27 @@ label {
 
 .profile_form{
     max-width: 800px;
+    background-color:rgb(166, 210, 225) ; 
     color: rgb(6, 6, 6);
 
 }
 
 .information-box {
-    border: 2px solid rgb(45,45,149); 
+    border: 2px solid rgb(235, 235, 240); 
     padding: 30px;
     margin: 10px 0; 
-    border-radius: 10px; /* Rounded corners */
-    background-color:rgb(166, 210, 225) ; 
+    border-radius: 10px; 
+    background-color: rgb(47, 98, 117);
     max-width: 1000px; 
     margin: auto;
 }
 
+.information-box p {
+    color: azure;
+}
+
 .information-box .button{
-    border: 2px solid rgb(45,45,149); 
+    border: 2px solid rgb(235, 235, 240); 
     width: 145px; 
     height: 50px; 
     background-color: rgb(250, 250, 250);
@@ -200,6 +209,10 @@ label {
     text-align: center; 
     color: rgb(45, 45, 149); 
     margin-bottom: 10px;
+}
+
+.your-skills ul,li {
+    color: azure;
 }
 
 ul {
@@ -262,7 +275,7 @@ li {
 .comment_container{
     width: 500px; 
     margin: 0 auto; 
-    background-color: rgb(81, 126, 156);
+    background-color: rgb(41, 73, 95);
     padding: 30px;
     font-size: large;
     border: 10px solid rgb(255, 255, 255);
@@ -406,7 +419,7 @@ li {
 .interested_people{
     width: 500px; 
     margin: 0 auto; /* Center the container */
-    background-color: rgb(81, 126, 156);
+    background-color: rgb(41, 73, 95);
     padding: 30px;
     font-size: large;
     border: 10px solid rgb(246, 242, 242);
